@@ -7,6 +7,7 @@
  *******************************************************************************/
 package org.epics.archiverappliance.utils.imprt;
 
+import com.google.protobuf.Message;
 import org.epics.archiverappliance.ByteArray;
 import org.epics.archiverappliance.Event;
 import org.epics.archiverappliance.common.TimeUtils;
@@ -25,6 +26,7 @@ import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 
 
 /**
@@ -33,7 +35,7 @@ import java.util.HashMap;
  *
  */
 public class CSVEvent implements DBRTimeEvent {
-    Instant timestamp;
+	Instant timestamp;
 	int status;
 	int severity;
 	SampleValue sampleValue;
@@ -53,122 +55,91 @@ public class CSVEvent implements DBRTimeEvent {
 		String[] vectorValueStr = valueStr.split("\\|");
 		status = Integer.parseInt(line[3]);
 		severity = Integer.parseInt(line[4]);
-		switch(type) {
-		case DBR_SCALAR_STRING:
-			sampleValue = new ScalarStringSampleValue(valueStr);
-			break;
-		case DBR_SCALAR_SHORT:
-			sampleValue = new ScalarValue<Short>(Short.valueOf(valueStr));
-			break;
-		case DBR_SCALAR_FLOAT:
-			sampleValue = new ScalarValue<Float>(Float.valueOf(valueStr));
-			break;       
-		case DBR_SCALAR_ENUM:
-			sampleValue = new ScalarValue<Short>(Short.valueOf(valueStr));
-			break;
-		case DBR_SCALAR_BYTE:
-			sampleValue = new ScalarValue<Byte>(Byte.valueOf(valueStr));
-			break;
-		case DBR_SCALAR_INT:
-			sampleValue = new ScalarValue<Integer>(Integer.valueOf(valueStr));
-			break;
-		case DBR_SCALAR_DOUBLE:
-			sampleValue = new ScalarValue<Double>(Double.valueOf(valueStr));
-			break;
-		case DBR_WAVEFORM_STRING:
-			if(valueStr.equals("")) {
-				sampleValue = new VectorStringSampleValue(Arrays.asList(new String[0]));
-			} else {
-				sampleValue = new VectorStringSampleValue(Arrays.asList(vectorValueStr));
-			}
-			break;      
-		case DBR_WAVEFORM_SHORT:
-		{
-			if(valueStr.equals("")) {
-				sampleValue = new VectorValue<Short>(Arrays.asList(new Short[0]));				
-			} else {
-				ArrayList<Short> vals = new ArrayList<Short>(vectorValueStr.length);
-				for(String val : vectorValueStr) {
-					vals.add(Short.valueOf(val));
+		switch (type) {
+			case DBR_SCALAR_STRING -> sampleValue = new ScalarStringSampleValue(valueStr);
+			case DBR_SCALAR_SHORT -> sampleValue = new ScalarValue<Short>(Short.valueOf(valueStr));
+			case DBR_SCALAR_FLOAT -> sampleValue = new ScalarValue<Float>(Float.valueOf(valueStr));
+			case DBR_SCALAR_ENUM -> sampleValue = new ScalarValue<Short>(Short.valueOf(valueStr));
+			case DBR_SCALAR_BYTE -> sampleValue = new ScalarValue<Byte>(Byte.valueOf(valueStr));
+			case DBR_SCALAR_INT -> sampleValue = new ScalarValue<Integer>(Integer.valueOf(valueStr));
+			case DBR_SCALAR_DOUBLE -> sampleValue = new ScalarValue<Double>(Double.valueOf(valueStr));
+			case DBR_WAVEFORM_STRING -> {
+				if (valueStr.equals("")) {
+					sampleValue = new VectorStringSampleValue(List.of());
+				} else {
+					sampleValue = new VectorStringSampleValue(Arrays.asList(vectorValueStr));
 				}
-				sampleValue = new VectorValue<Short>(vals);				
 			}
-		}
-		break;         
-		case DBR_WAVEFORM_FLOAT:
-		{
-			if(valueStr.equals("")) {
-				sampleValue = new VectorValue<Float>(Arrays.asList(new Float[0]));				
-			} else {
-				ArrayList<Float> vals = new ArrayList<Float>(vectorValueStr.length);
-				for(String val : vectorValueStr) {
-					vals.add(Float.valueOf(val));
+			case DBR_WAVEFORM_SHORT -> {
+				if (valueStr.equals("")) {
+					sampleValue = new VectorValue<Short>(List.of());
+				} else {
+					ArrayList<Short> vals = new ArrayList<Short>(vectorValueStr.length);
+					for (String val : vectorValueStr) {
+						vals.add(Short.valueOf(val));
+					}
+					sampleValue = new VectorValue<Short>(vals);
 				}
-				sampleValue = new VectorValue<Float>(vals);
 			}
-		}
-		break;       
-		case DBR_WAVEFORM_ENUM:
-		{
-			if(valueStr.equals("")) {
-				sampleValue = new VectorValue<Short>(Arrays.asList(new Short[0]));				
-			} else {
-				ArrayList<Short> vals = new ArrayList<Short>(vectorValueStr.length);
-				for(String val : vectorValueStr) {
-					vals.add(Short.valueOf(val));
+			case DBR_WAVEFORM_FLOAT -> {
+				if (valueStr.equals("")) {
+					sampleValue = new VectorValue<Float>(List.of());
+				} else {
+					ArrayList<Float> vals = new ArrayList<Float>(vectorValueStr.length);
+					for (String val : vectorValueStr) {
+						vals.add(Float.valueOf(val));
+					}
+					sampleValue = new VectorValue<Float>(vals);
 				}
-				sampleValue = new VectorValue<Short>(vals);
 			}
-		}
-		break;
-		case DBR_WAVEFORM_BYTE:
-		{
-			if(valueStr.equals("")) {
-				sampleValue = new VectorValue<Byte>(Arrays.asList(new Byte[0]));				
-			} else {
-				ArrayList<Byte> vals = new ArrayList<Byte>(vectorValueStr.length);
-				for(String val : vectorValueStr) {
-					vals.add(Byte.valueOf(val));
+			case DBR_WAVEFORM_ENUM -> {
+				if (valueStr.equals("")) {
+					sampleValue = new VectorValue<Short>(List.of());
+				} else {
+					ArrayList<Short> vals = new ArrayList<Short>(vectorValueStr.length);
+					for (String val : vectorValueStr) {
+						vals.add(Short.valueOf(val));
+					}
+					sampleValue = new VectorValue<Short>(vals);
 				}
-				sampleValue = new VectorValue<Byte>(vals);
 			}
-		}
-		break;
-		case DBR_WAVEFORM_INT:
-		{
-			if(valueStr.equals("")) {
-				sampleValue = new VectorValue<Integer>(Arrays.asList(new Integer[0]));				
-			} else {
-				ArrayList<Integer> vals = new ArrayList<Integer>(vectorValueStr.length);
-				for(String val : vectorValueStr) {
-					vals.add(Integer.valueOf(val));
+			case DBR_WAVEFORM_BYTE -> {
+				if (valueStr.equals("")) {
+					sampleValue = new VectorValue<Byte>(Arrays.asList(new Byte[0]));
+				} else {
+					ArrayList<Byte> vals = new ArrayList<Byte>(vectorValueStr.length);
+					for (String val : vectorValueStr) {
+						vals.add(Byte.valueOf(val));
+					}
+					sampleValue = new VectorValue<Byte>(vals);
 				}
-				sampleValue = new VectorValue<Integer>(vals);
 			}
-		}
-		break;
-		case DBR_WAVEFORM_DOUBLE:
-		{
-			if(valueStr.equals("")) {
-				sampleValue = new VectorValue<Double>(Arrays.asList(new Double[0]));				
-			} else {
-				ArrayList<Double> vals = new ArrayList<Double>(vectorValueStr.length);
-				for(String val : vectorValueStr) {
-					vals.add(Double.valueOf(val));
+			case DBR_WAVEFORM_INT -> {
+				if (valueStr.equals("")) {
+					sampleValue = new VectorValue<Integer>(Arrays.asList(new Integer[0]));
+				} else {
+					ArrayList<Integer> vals = new ArrayList<Integer>(vectorValueStr.length);
+					for (String val : vectorValueStr) {
+						vals.add(Integer.valueOf(val));
+					}
+					sampleValue = new VectorValue<Integer>(vals);
 				}
-				sampleValue = new VectorValue<Double>(vals);
 			}
+			case DBR_WAVEFORM_DOUBLE -> {
+				if (valueStr.equals("")) {
+					sampleValue = new VectorValue<Double>(Arrays.asList(new Double[0]));
+				} else {
+					ArrayList<Double> vals = new ArrayList<Double>(vectorValueStr.length);
+					for (String val : vectorValueStr) {
+						vals.add(Double.valueOf(val));
+					}
+					sampleValue = new VectorValue<Double>(vals);
+				}
+			}
+			case DBR_V4_GENERIC_BYTES -> sampleValue = new ScalarStringSampleValue(valueStr);
+			default -> throw new Exception("Unsupported DBR type in swicth statement " + type.toString());
 		}
-		break;
-		case DBR_V4_GENERIC_BYTES:
-			sampleValue = new ScalarStringSampleValue(valueStr);
-			break;
-			
-		default:
-			throw new Exception("Unsupported DBR type in swicth statement " + type.toString());
-		}
-		assert(sampleValue != null);
-	}	
+	}
 
 	public CSVEvent(CSVEvent src) {
 		super();
@@ -206,7 +177,7 @@ public class CSVEvent implements DBRTimeEvent {
 
 
 	@Override
-    public Instant getEventTimeStamp() {
+	public Instant getEventTimeStamp() {
 		return timestamp;
 	}
 
@@ -218,6 +189,24 @@ public class CSVEvent implements DBRTimeEvent {
 	@Override
 	public ByteArray getRawForm() {
 		throw new UnsupportedOperationException("Not supported. Convert to a PB form if you want to use this.");
+    }
+
+    /**
+     *
+     * @return
+     */
+    @Override
+    public Message getMessage() {
+		return null;
+    }
+
+    /**
+     *
+     * @return
+     */
+    @Override
+    public Class<? extends Message> getMessageClass() {
+		return null;
 	}
 
 	@Override
@@ -323,8 +312,8 @@ public class CSVEvent implements DBRTimeEvent {
 
     @Override
     public YearSecondTimestamp getYearSecondTimestamp() {
-        return TimeUtils.convertToYearSecondTimestamp(this.getEventTimeStamp());
-    }
+		return TimeUtils.convertToYearSecondTimestamp(this.getEventTimeStamp());
+	}
 }
 
 
